<resources>
    <string name="app_name">Load App</string>
    <string name="app_description">Download files from Internet</string>
    <string name="action_settings">Settings</string>


    <string name="notification_title">Download status:</string>
    <string name="notification_description">The Project 3 repository is downloaded</string>
    <string name="notification_button">See changes</string>

    <string name="button_name">Click me</string>
    <string name="button_loading">We are loading </string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="glide_description">Glide - Image loading library by BumpTech</string>
    <string name="loading_app_description">LoadingApp - Current repository by Udacity</string>
    <string name="retrofit_description">Retrofit - Type-safe HTTP client for Android and Java by Saquare, Inc</string>
    <string name="select_download">Select the file to dowload:</string>
    <string name="cloud_image_description">simple cloud image to represent download</string>
    <string name="download_finished">Your download has finished</string>
    <string name="finished_download_notification_channel_description">Finished download alert notification</string>
    <string name="download">Download</string>
    <string name="finished_download_channel_id">finished_download_channel</string>
    <string name="check_status">Check the status</string>
    <string name="choose_file">Choose a file to download</string>
    <string name="loading_file">Downloading file...</string>
    <string name="your_download_has_finished">Your download has finished</string>
    <string name="download_again">Download again</string>
    <string name="file_name">File name:</string>
    <string name="status_tv">Status:</string>
    <string name="ok">OK</string>
    <string name="download_details">Download Details</string>
</resources>
